# gcp-llm-cpt

./: README.md  pyproject.toml
images/: .gcloudignore  Dockerfile.cuda  Dockerfile.spark  build.sh  cloudbuild.yaml
src/: components.py  main.py  pipelines.py  preprocessing.py  recipe.py  utils.py
src/config/: gcp.py  job.py  llama3_2_1b.yaml
src/scripts/: preprocessing.py  train_recipe.py
